--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,6 +4,8 @@
 }; %>
 <%= _.template(require('./../includes/header.html'))(data) %>
 
-<div class="container">Первая страница.</div>
+<main class="home-page">
+  <h1>Yo main</h1>
+</main>
 
 <%= _.template(require('./../includes/footer.html'))(data) %>
