config scss and html

--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,5 +1,10 @@
-    <footer><%=author%></footer>
+<footer>
+  <div class="container">
+    Footer
+  </div>
+</footer>
 
-    <script src="js/bundle.js"></script>
-  </body>
+<!--main bundle-->
+<script src="js/bundle.js"></script>
+</body>
 </html>
