--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,17 +7,16 @@
 //Vendors
 @import "vendor/flex.css";
 
-////Utils
-//@import "utils/variables";
-//@import "utils/mixins";
-//@import "utils/fonts";
-//@import "base/typography";
-//
-////Layout
-//@import "layout/scrollBar";
-//@import "layout/routeChangeAnimation";
-//
-////Components
-//@import "components/button";
-//@import "components/common";
-//@import "components/modals";
+//Utils
+@import "utils/variables";
+@import "utils/mixins";
+@import "utils/media";
+@import "utils/fonts";
+@import "base/typography";
+
+//Layout
+@import "layout/container";
+
+//Components
+@import "components/common";
+@import "components/button";
