--- a/src/scss/utils/fonts.scss
+++ b/src/scss/utils/fonts.scss
@@ -1,3 +1,3 @@
-@include font-face("HelveticaNeue", "HelveticaNeueCyr-Roman", 400);   //Regular
-@include font-face("HelveticaNeue", "HelveticaNeueCyr-Light", 300);    //Light
-@include font-face("AngleciaProDisplay", "AngleciaProDisplay", 400);   //Regular
+//@include font-face("HelveticaNeue", "HelveticaNeueCyr-Roman", 400);   //Regular
+//@include font-face("HelveticaNeue", "HelveticaNeueCyr-Light", 300);    //Light
+//@include font-face("AngleciaProDisplay", "AngleciaProDisplay", 400);   //Regular
