build: zero settings for projects

--- a/src/html/views/home.html
+++ b/src/html/views/home.html
@@ -4,9 +4,11 @@
 <!--Header-->
 <%= _.template(require('./../includes/header.html'))({}) %>
 
-<div class="container">
-  Home page
-</div>
+<main class="home-page" data-page="home">
+  <div class="container">
+    Home page
+  </div>
+</main>
 
 <%= _.template(require('./../includes/footer.html'))({}) %>
 
