--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -4,7 +4,7 @@
 <!--Header-->
 <%= _.template(require('./../includes/header.html'))({}) %>
 
-<main class="markup">
+<main class="markup" data-page="markup">
   <div class="container">
     <h3>Links</h3>
     <ul>
